[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql", "macros" ] }
reqwest = { version = "0.11.22", features = ["json"] }
urlencoding = "2.1.3"
csv = "1.3.0"
itertools = "0.12.0"